# auto-evaluator

./: README.md  docker-compose.yaml
api/: .env  .gitignore  Dockerfile  Makefile  README.md  build.sh  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  text_utils.py
api/docs/bandung/: bandung - testing.csv  bandung.txt
nextjs/: .env.local
nextjs/components/: HeaderEvaluator.tsx  Playground.tsx  Sidebar.tsx
nextjs/pages/: _app.tsx  index.tsx
nextjs/pages/about/: index.tsx
nextjs/pages/playground/: index.tsx
