[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["dzakwan.falih <dzakwan.falih@fisclouds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.4.3"
fastapi = "0.85.2"
langchain = "0.1.5"
python-multipart = "0.0.6"
tiktoken = "0.3.1"
faiss-cpu = "1.7.3"
anthropic = "0.2.8"
pypdf = "3.7.1"
filetype = "1.2.0"
tokenizers = "0.13.3"
scikit-learn = "1.2.1"
llama-index = "0.4.35.post1"
sse-starlette = "1.3.3"
gpt-index = "0.5.16"
python-dotenv = "1.0.0"
replicate = "0.8.3"
langchain-google-vertexai = "^0.0.3"
openai = "0.27.0"
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
